Add fullscreen restriction for browser window drag.

This will partly fix the problem of Settings and Discover internal apps.
Both of their kAppType are set to BROWSER, which is not what we want for
window drag. For real browser window, its frame will only be hidden when
it is full-screened. Add the restriction here to avoid the problem of
Settings and Discover when they are only maximized.

Bug: 877723
Change-Id: Ib6b6708b8065940a1a94be89cdde6b317093cdb2
Reviewed-on: https://chromium-review.googlesource.com/c/1274839
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598906}
Former-commit-id: f4556fd0e59ab0f4e258149d832db0d3d3d118ca